always follow the user setting for eliding tabs

BUG: 458136